GROUP-148 fixed layout issues and issues with logo

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -22,6 +22,7 @@ body {
 	font-size: 130px;
 	background: #ffffff;
 	background: rgba(255, 255, 255, 0.9);
+	padding-bottom: 5px;
 
 }
 
@@ -29,6 +30,8 @@ body {
 	font-size: 77px;
 	background: #ffffff;
 	background: rgba(255, 255, 255, 0.9);
+	padding-top: 3px;
+	padding-bottom: 3px;
 }
 
 .featurette-divider {
